--- a/styles/_default.scss
+++ b/styles/_default.scss
@@ -1,21 +1,31 @@
 html{
-    margin: 0;
-    font-size: 10px;
-  }
-  body{
-    background-color: $color-primary;
-    margin: 0;
-    font-family: $font-primary;
-    font-weight: $font-regular;
-  }
-  *,
-  *:before,
-  *:after{
-    box-sizing: border-box;
-  }
-  a{
-    text-decoration: none;
-  }
+  margin: 0;
+  font-size: 10px;
+}
+body{
+  background-color: $color-primary;
+  margin: 0;
+  font-family: $font-primary;
+  font-weight: $font-regular;
+}
+*,
+*:before,
+*:after{
+  box-sizing: border-box;
+}
+a{
+  text-decoration: none;
+}
 .d-none{
   display: none;
 }
+
+
+
+//IDEA
+
+// @include breakpoint("mobile"){
+//   body{
+//     background-color: #fff;
+//   }
+// }
