--- a/styles/_contact.scss
+++ b/styles/_contact.scss
@@ -1,6 +1,6 @@
-.section--contact{
+.section__contact{
     padding-top: 7rem;
-    width: 100vw;
+    width: 100%;
     height: 90vh;
     display: flex;
     align-items: center;
@@ -67,15 +67,15 @@
                     transform: translateY(-15px);
                     font-size: 1.2rem;
                 }
-                .validation{
-                    position: absolute;
-                    top: 50%;
-                    right: 1rem;
-                    color: #FD4444;
-                    opacity: 0;
-                    transform: translate(5rem,-50%);
-                    transition: all 0.2s ease-in;
-                }
+                // .validation{
+                //     position: absolute;
+                //     top: 50%;
+                //     right: 1rem;
+                //     color: #FD4444;
+                //     opacity: 0;
+                //     transform: translate(5rem,-50%);
+                //     transition: all 0.2s ease-in;
+                // }
             }
             > label:nth-child(4){
                 &:focus-within > span, textarea:not(:placeholder-shown) + span{
@@ -84,7 +84,7 @@
             }
             > button{
                 margin-top: 5rem;
-                @include button(1px,1.5px);
+                @include button(1.5px,1.5px);
             }
         }
     }
@@ -115,48 +115,61 @@
 
 
 @include breakpoint("lg-desktop"){
-    .section--contact .div__img{
+    .section__contact .div__img{
         margin-right: 5rem;
     }
 }
 @include breakpoint("desktop"){
-    .section--contact{
+    .section__contact{
         flex-direction: column-reverse;
         height: max-content;
-    }
-    .section--contact .div__img{
-        margin-top: 5rem;
-        margin-right: 0;
-    }
-    .section--contact .div__img img{
-        display: none;
-    }
-    .section--contact .div__img h2{
-        font-size: 3.6rem;
-    }
-    .section--contact .div__form{
-        margin: 5rem 0;
+        .div__img{
+            margin-top: 5rem;
+            margin-right: 0;
+            img{
+                display: none;
+            }
+            h2{
+                font-size: 3.6rem;
+            }
+        }
+        .div__form{
+            margin: 5rem 0;
+        }
     }
 }
 @include breakpoint("mobile"){
-    .section--contact .div__img{
-        padding: 0 2rem;
-    }
-    .section--contact .div__img p{
-        font-size: 1.4rem;
-    }
-    .section--contact .div__form{
-        width: 80%;
+    .section__contact{
+        padding-top: 10rem;
+        .div__img{
+            padding: 0 2rem;
+            p{
+                font-size: 1.4rem;
+            }
+        }
+        .div__form{
+            width: 80%;
+        }
     }
 }
 @include breakpoint("sm-mobile"){
-    .section--contact .div__img h2{
-        text-align: center;
-    }
-    .section--contact .div__img p{
-        text-align: center;
-    }
-    .section--contact .div__form{
-        width: 100%;
+    .section__contact{
+        .div__img{
+            h2{
+                text-align: center;
+            }
+            p{
+                text-align: center;
+            }
+        }
+        .div__form{
+            width: 100%;
+        }
+    } 
+}
+@media screen and (min-height: 1000px){
+    .section__contact{
+        height: 90vh;
+        justify-content: center;
     }
 }
