--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -32,6 +32,7 @@ header{
           width: 0;
           height: 1.5px;
           background-color: $color-secondary;
+          cursor: pointer;
           transition: all 0.1s ease-in;
         }
         &:hover{
@@ -43,7 +44,7 @@ header{
     }
   }
   
-  .section--home{
+  .section__home{
     padding-top: 7rem;
     height: 90vh;
     width: 100vw;
@@ -55,7 +56,8 @@ header{
       font-size: 5.8rem;
       margin: 16rem 0 3rem 0;
       width: 26ch;
-      font-family: 'Quicksand', sans-serif;
+      font-family: $font-secondary;
+      font-weight: $font-medium;
       animation: type 5s steps(31), blink 0.5s step-end infinite alternate;
       white-space: nowrap;
       overflow: hidden;
@@ -82,10 +84,11 @@ header{
       align-items: flex-end;
       margin-right: 5rem;
       a{
+        transform: scale(0.9);
         margin: 0 2rem 0 2rem;
-        transition: all 0.1s ease;
+        transition: transform 0.15s cubic-bezier(0, 0.2, 0.5, 3) 0s;
         &:hover{
-          transform: translateY(-10px);
+          transform: scale(1.2);
         }
       }
     }
@@ -105,12 +108,12 @@ header{
 
 
 @include breakpoint("desktop"){
-  .section--home h1{
+  .section__home h1{
     font-size: 4.8rem;
   }
 }
 @include breakpoint("tablet"){
-  .section--home h1{
+  .section__home h1{
     font-size: 3.6rem;
   }
   footer p{
@@ -120,54 +123,56 @@ header{
 @include breakpoint("mobile"){
   header{
     height: 10rem;
+    ul {
+      li{
+      margin: 0 4rem 0 4rem;
+        a span{
+          display: block;
+        }
+      }
+      li:nth-child(1){
+        margin-left: 0;
+      }
+      li:nth-child(3){
+        margin-right: 0;
+      }
+    }
   }
-  header ul li{
-    margin: 0 4rem 0 4rem;
-  }
-  header ul li:nth-child(1){
-    margin-left: 0;
-  }
-  header ul li:nth-child(3){
-    margin-right: 0;
-  }
-  header ul li a span{
-    display: block;
-  }
-  .section--home{
+  .section__home{
     padding-top: 10rem;
     height: 85vh;
-  }
-  .section--home h1{
-    animation: none;
-    width: auto;
-    white-space: inherit;
-    border: none;
-    text-align: center;
-    padding: 0 2rem;
-    margin-top: 10rem;
-  }
-  .section--home p{
-    font-size: 1.4rem;
-    text-align: center;
-    width: auto;
-    padding: 0 2rem;
+    h1{
+      animation: none;
+      width: auto;
+      white-space: inherit;
+      border: none;
+      text-align: center;
+      padding: 0 2rem;
+      margin-top: 10rem;
+    }
+    p{
+      font-size: 1.4rem;
+      text-align: center;
+      width: auto;
+      padding: 0 2rem;
+    }
   }
   footer{
     flex-direction: column-reverse;
     height: 15vh;
-  }
-  footer p{
-    margin-left: 0;
-    margin-top: 3rem;
-  }
-  footer div{
-    margin-right: 0;
-  }
-  footer div a:nth-child(1){
-    margin-left: 0;
-  }
-  footer div a:nth-child(4){
-    margin-right: 0;
+    p{
+      margin-left: 0;
+      margin-top: 3rem;
+    }
+    div{
+      margin-right: 0;
+      a:nth-child(1){
+        margin-left: 0;
+      }
+      a:nth-child(4){
+        margin-right: 0;
+      }
+    }
   }
 }
 @include breakpoint("sm-mobile"){
