--- a/styles/_default.scss
+++ b/styles/_default.scss
@@ -3,7 +3,8 @@ html{
   font-size: 10px;
 }
 body{
-  background-color: $color-primary;
+  // background-color: $color-primary;
+  background-color: $white-color;
   margin: 0;
   font-family: $font-primary;
   font-weight: $font-regular;
