--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -4,7 +4,7 @@ $font-secondary: 'Quicksand', sans-serif;
 $color-primary: #F0F0F0;
 $color-secondary: #9C2D41;
 $color-terciary: #ABABAB;
-
+$white-color: #fff;
 
 $font-light: 300;
 $font-regular: 400;
