--- a/styles/_default.scss
+++ b/styles/_default.scss
@@ -3,7 +3,7 @@ html{
   font-size: 10px;
 }
 body{
-  // background-color: $color-primary;
+  scroll-behavior: smooth;
   background-color: $white-color;
   margin: 0;
   font-family: $font-primary;
