--- a/styles/_about.scss
+++ b/styles/_about.scss
@@ -13,6 +13,7 @@
             font-family: $font-secondary;
             font-weight: $font-medium;
             color: $color-secondary;
+            margin: 3rem 0;
         }
         img{
             display: none;
