--- a/styles/_works.scss
+++ b/styles/_works.scss
@@ -77,6 +77,47 @@
             margin-top: 12rem;
             .works__img--right,.works__img--left{
                 max-width: 40rem;
+                > a{
+                    display: flex;
+                    justify-content: space-between;
+                    text-decoration: none;
+                    align-items: center;
+                    color: #000;
+                    width: 12.5rem;
+                    height: 2rem;
+                    transition: all 0.3s cubic-bezier(0, 0.2, 0.5, 3) 0s;
+                    > p{
+                        font-size: 1.2rem;
+                        font-weight: $font-light;
+                        width: max-content;
+                        &:after{
+                          content: '';
+                          position: absolute;
+                          bottom: 0;
+                          left: 0;
+                          width: 0;
+                          height: 1.5px;
+                          background-color: $color-secondary;
+                          cursor: pointer;
+                          transition: all 0.15s ease-in;
+                        }
+                        
+                    }
+                    > img{
+                        border: none;
+                        height: 100%;
+                        width: 25%;
+                    }
+                    &:hover{
+                        width: 13rem;
+                    }
+                    &:hover p:after{
+                      width: 64%;
+                    }
+                    &:hover img{
+                        padding-left: 10%;
+                    }
+                }
             }
             .works__img--right{
                 margin-right: 10rem;
