--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,42 +27,67 @@ a {
   display: none;
 }
 
-header {
+.menu__icon {
+  height: 3rem;
+  width: 3rem;
+  position: fixed;
+  z-index: 2;
+  left: 5rem;
+  top: 3rem;
+  cursor: pointer;
+}
+
+.menu__icon--line {
+  height: 2px;
+  width: 3rem;
+  display: block;
+  background-color: #000;
+  margin-bottom: 4px;
+  -webkit-transition: background-color 0.5s ease, -webkit-transform 0.2s ease;
+  transition: background-color 0.5s ease, -webkit-transform 0.2s ease;
+  transition: transform 0.2s ease, background-color 0.5s ease;
+  transition: transform 0.2s ease, background-color 0.5s ease, -webkit-transform 0.2s ease;
+}
+
+.menu__line--left {
+  width: 1.5rem;
+}
+
+.menu__line--right {
+  width: 1.5rem;
+  float: right;
+}
+
+.nav {
+  position: fixed;
+  z-index: 1;
+  background-color: #000;
+}
+
+.nav__content {
+  position: fixed;
+  top: 40%;
   width: 100%;
-  height: 7rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  position: absolute;
-  background-color: #EAE9E9;
+  text-align: center;
+  cursor: default;
 }
 
-header ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  list-style-type: none;
-  padding: 0;
+.nav__list-item {
+  position: relative;
+  display: inline-block;
+  -webkit-transition-delay: 0.8s;
+          transition-delay: 0.8s;
+  opacity: 0;
+  -webkit-transform: translate(0%, 100%);
+          transform: translate(0%, 100%);
+  -webkit-transition: opacity 0.2s ease, -webkit-transform 0.3s ease;
+  transition: opacity 0.2s ease, -webkit-transform 0.3s ease;
+  transition: opacity 0.2s ease, transform 0.3s ease;
+  transition: opacity 0.2s ease, transform 0.3s ease, -webkit-transform 0.3s ease;
+  margin-right: 6rem;
 }
 
-header ul li {
-  margin: 0 7rem 0 7rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-header ul li a {
+.nav__list-item a {
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -72,16 +97,11 @@ header ul li a {
       -ms-flex-direction: column;
           flex-direction: column;
   text-align: center;
-  font-size: 1.6rem;
+  font-size: calc(2vw + 10px);
   color: #000000;
 }
 
-header ul li a span {
-  display: none;
-  margin-bottom: 5px;
-}
-
-header ul li a:after {
+.nav__list-item a:after {
   content: '';
   position: absolute;
   bottom: 0;
@@ -94,15 +114,114 @@ header ul li a:after {
   transition: all 0.15s ease-in;
 }
 
-header ul li a:hover:after {
+.nav__list-item a:hover:after {
   left: 0;
   width: 100%;
 }
 
-.section__home {
-  padding-top: 7rem;
-  height: 90vh;
+.nav:before, .nav:after {
+  content: '';
+  position: fixed;
   width: 100vw;
+  height: 100vh;
+  background: #9C2D41;
+  z-index: -1;
+  -webkit-transition: -webkit-transform cubic-bezier(0.77, 0, 0.175, 1) 0.8s;
+  transition: -webkit-transform cubic-bezier(0.77, 0, 0.175, 1) 0.8s;
+  transition: transform cubic-bezier(0.77, 0, 0.175, 1) 0.8s;
+  transition: transform cubic-bezier(0.77, 0, 0.175, 1) 0.8s, -webkit-transform cubic-bezier(0.77, 0, 0.175, 1) 0.8s;
+  -webkit-transform: translateX(0) translateY(-100%);
+          transform: translateX(0) translateY(-100%);
+}
+
+.nav:after {
+  background: #F0F0F0;
+  -webkit-transition-delay: 0;
+          transition-delay: 0;
+}
+
+.nav:before {
+  -webkit-transition-delay: 0.1s;
+          transition-delay: 0.1s;
+}
+
+body.nav__active header .menu__icon--line {
+  background-color: #000;
+  -webkit-transform: translateX(0px) rotate(-45deg);
+          transform: translateX(0px) rotate(-45deg);
+}
+
+body.nav__active header .menu__line--left {
+  -webkit-transform: translateX(1px) rotate(45deg);
+          transform: translateX(1px) rotate(45deg);
+}
+
+body.nav__active header .menu__line--right {
+  -webkit-transform: translateX(-2px) rotate(45deg);
+          transform: translateX(-2px) rotate(45deg);
+}
+
+body.nav__active .nav {
+  visibility: visible;
+}
+
+body.nav__active .nav:before, body.nav__active .nav:after {
+  -webkit-transform: translateX(0%) translateY(0%);
+          transform: translateX(0%) translateY(0%);
+}
+
+body.nav__active .nav:after {
+  -webkit-transition-delay: 0.1s;
+          transition-delay: 0.1s;
+}
+
+body.nav__active .nav:before {
+  -webkit-transition-delay: 0s;
+          transition-delay: 0s;
+}
+
+body.nav__active .nav__content {
+  cursor: pointer;
+}
+
+body.nav__active .nav__list-item {
+  opacity: 1;
+  -webkit-transform: translateX(0%);
+          transform: translateX(0%);
+  -webkit-transition: opacity 0.3s ease, color 0.3s ease, -webkit-transform 0.3s ease;
+  transition: opacity 0.3s ease, color 0.3s ease, -webkit-transform 0.3s ease;
+  transition: opacity 0.3s ease, transform 0.3s ease, color 0.3s ease;
+  transition: opacity 0.3s ease, transform 0.3s ease, color 0.3s ease, -webkit-transform 0.3s ease;
+}
+
+body.nav__active .nav__list-item:nth-child(0) {
+  -webkit-transition-delay: 0.5s;
+          transition-delay: 0.5s;
+}
+
+body.nav__active .nav__list-item:nth-child(1) {
+  -webkit-transition-delay: 0.6s;
+          transition-delay: 0.6s;
+}
+
+body.nav__active .nav__list-item:nth-child(2) {
+  -webkit-transition-delay: 0.7s;
+          transition-delay: 0.7s;
+}
+
+body.nav__active .nav__list-item:nth-child(3) {
+  -webkit-transition-delay: 0.8s;
+          transition-delay: 0.8s;
+}
+
+body.nav__active .nav__list-item:nth-child(4) {
+  -webkit-transition-delay: 0.9s;
+          transition-delay: 0.9s;
+}
+
+.section__home {
+  height: 90vh;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -121,7 +240,7 @@ header ul li a:hover:after {
 .section__home h1 {
   font-size: 5.8rem;
   margin: 16rem 0 3rem 0;
-  width: 26ch;
+  width: 20ch;
   font-family: "Quicksand", sans-serif;
   font-weight: 500;
   -webkit-animation: type 5s steps(31), blink 0.5s step-end infinite alternate;
@@ -221,23 +340,16 @@ footer div a:hover {
 }
 
 @media only screen and (max-width: 576px) {
-  header {
-    height: 10rem;
+  header ul {
+    padding-left: 0;
   }
-  header ul li {
-    margin: 0 4rem 0 4rem;
-  }
-  header ul li a span {
-    display: block;
-  }
-  header ul li:nth-child(1) {
-    margin-left: 0;
-  }
-  header ul li:nth-child(3) {
+  header ul .nav__list-item {
     margin-right: 0;
   }
+  header ul li {
+    margin: 0 4rem;
+  }
   .section__home {
-    padding-top: 10rem;
     height: 85vh;
   }
   .section__home h1 {
@@ -280,12 +392,11 @@ footer div a:hover {
 
 @media only screen and (max-width: 320px) {
   header ul li {
-    margin: 0 2rem 0 2rem;
+    margin: 0 2rem;
   }
 }
 
 .section__about {
-  padding-top: 7rem;
   height: 90vh;
   width: 100%;
   display: -webkit-box;
@@ -483,9 +594,6 @@ footer div a:hover {
 }
 
 @media only screen and (max-width: 576px) {
-  .section__about {
-    padding-top: 10rem;
-  }
   .section__about div button {
     margin: 3rem 0;
   }
@@ -505,7 +613,6 @@ footer div a:hover {
 }
 
 .section__contact {
-  padding-top: 7rem;
   width: 100%;
   height: 90vh;
   display: -webkit-box;
@@ -768,9 +875,6 @@ footer div a:hover {
 }
 
 @media only screen and (max-width: 576px) {
-  .section__contact {
-    padding-top: 10rem;
-  }
   .section__contact .div__img {
     padding: 0 2rem;
   }
@@ -808,7 +912,6 @@ footer div a:hover {
   height: -webkit-max-content;
   height: -moz-max-content;
   height: max-content;
-  padding-top: 7rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -970,6 +1073,8 @@ footer div a:hover {
   border: none;
   height: 100%;
   width: 25%;
+  -webkit-transform: translateX(-10px) translateY(1px);
+          transform: translateX(-10px) translateY(1px);
 }
 
 .section__works .works__container > div .works__img--right > a:hover, .section__works .works__container > div .works__img--left > a:hover {
@@ -981,7 +1086,8 @@ footer div a:hover {
 }
 
 .section__works .works__container > div .works__img--right > a:hover img, .section__works .works__container > div .works__img--left > a:hover img {
-  padding-left: 10%;
+  -webkit-transform: translateX(0px);
+          transform: translateX(0px);
 }
 
 .section__works .works__container > div .works__img--right {
@@ -1048,9 +1154,6 @@ footer div a:hover {
 }
 
 @media only screen and (max-width: 576px) {
-  .section__works {
-    padding-top: 10rem;
-  }
   .section__works > h2 {
     font-size: 3.6rem;
   }
