--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -5,7 +5,9 @@
 @import 'mixins';
 
 @import 'default';
+@import 'header';
 @import 'home';
+@import 'footer';
 @import 'about';
 @import 'contact';
 @import 'works';
@@ -14,5 +16,3 @@
 
 
 
-// transition: all .6s cubic-bezier(.645, .045, .355, 1);
-//#6C63FF
